<package format="3">
  <name>wifi_ddwrt</name>
  <version>0.2.2</version>
  <description>Access to the DD-WRT wifi</description>
  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/wifi_ddwrt</url>

  <author email="hassan@willowgarage.com">Scott Hassan</author>
  <author email="eitan@willowgarage.com">Eitan Marder-Eppstein</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <exec_depend>std_msgs</exec_depend>>
  <exec_depend>pr2_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-mechanize</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-mechanize</exec_depend>

</package>
